Fixed project session padding on IE

--- a/css/styles.css
+++ b/css/styles.css
@@ -806,6 +806,13 @@ select:-webkit-autofill:focus {
   }
 }
 
+@media screen and (min-width: 768px) and (-ms-high-contrast: none) {
+  .projects-inner {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
 @media (min-width: 992px) {
   .projects-inner {
     padding-left: 0;
@@ -936,7 +943,7 @@ select:-webkit-autofill:focus {
 
 @media screen and (min-width: 768px) and (-ms-high-contrast: none) {
   .project {
-    width: 45%;
+    width: 48%;
   }
 }
 
